# nmeautils

./: .gitignore  .mypy.ini  .travis.yml  README.md  README.rst  SCPIlogger.py  SimpleNMEAlog.py  garminLogger.py  jacksonLogger.py  nmealog.py  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: .travis.yml
nmeautils/: __init__.py  nmea.py
nmeautils/tests/: test_mod.py
tests/: test.py  test_mod.py
