[metadata]
name = nmeautils
version = 1.1.0
description = read / parse GPS NMEA
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/nmeautils
keywords =
  gps
  nmea
  scpi
classifiers =
  Intended Audience :: Science/Research
  Development Status :: 5 - Production/Stable
  Topic :: Scientific/Engineering
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  numpy
  pyserial

[options.extras_require]
tests =
  pytest
  pytest-cov
  flake8
  mypy